# mbari-soundscape-pipeline

./: .gitignore  LICENSE  README.md  compare_s3_bucket_counts.py  convert_to_ndjson.py  pyproject.toml  requirements.txt  run_meta_gen.py
.github/workflows/: ci.yml
daily_metadata/: daily_metadata.py
docs/: README.md  athena_queries.md  aws.md  compare_s3_bucket_counts.md  convert_to_ndjson.md  daily_metadata.md  pyproject.md  run_meta_gen.md
json/iclisten/2019/: 20191023.json  20191024.json
json/ndOutput/2019/: 20191023.json  20191024.json
mbari_soundscape_pipeline/: convert_to_ndjson.py  run_meta_gen.py
tests/: test_convert_to_ndjson.py
